# MLCompiler

MP1_CPUGPUNPU/: mj_npu.pem
MP1_CPUGPUNPU/mp1/: CMakeLists.txt  README.md  save of mp1-report-structure.docx  ~$ve of mp1-report-structure.docx  ~WRL0003.tmp
MP1_CPUGPUNPU/mp1/cpu/: CMakeLists.txt  gemm_cpu.cpp
MP1_CPUGPUNPU/mp1/gpu/: gemm_gpu.cu
mp1/: MJ_GPU.pem  mp1-report-structure.docx  ~$1-report-structure.docx
mp1/mp1-report-template-latex/: course.sty  main.tex
mp2_Compiler transformation/xla_cpu/xla/: xla_configure.bazelrc
mp2_Compiler transformation/xla_cpu/xla/xla/hlo/transforms/simplifiers/: algebraic_simplifier.cc  algebraic_simplifier_test.cc
